2008-12-07  Behdad Esfahbod  <behdad@gnome.org>

	Bug 563156 – Document printing and scanning gunichar values

	* glib/tmpl/unicode.sgml: Document printing and scanning gunichar
	values.

2008-12-07  Behdad Esfahbod  <behdad@gnome.org>

	Bug 563150 – G_GU?INT*_MODIFIER/FORMAT docs

	* glib/tmpl/glib-unused.sgml:
	* glib/tmpl/macros_misc.sgml:
	* glib/tmpl/types.sgml:
	Update docs to mention scanning as well as printing.
	Cross reference these from their respective types.

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.2 ===

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.1 ===

2008-12-01  Alexander Larsson  <alexl@redhat.com>

        Reviewed by NOBODY (OOPS!).

        * gio/gio-sections.txt:

2008-11-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/running.sgml: Mention all and help special options in
	debug envvars.

2008-11-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 562538 – GObject interface tutorial shouldn't finalise with
	"Please forget everything"

	* gobject/tut_gtype.xml: Remove the questionable closing sentence
	and all references to private functions. Pointed out by Christian
	Dywan.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 559452 – GObject Reference Manual (typo)
	Bug 559462 – GObject Reference Manual (typo)
	Bug 559517 – GObject Reference Manual (typo)

	* gobject/tut_howto.xml:
	* gobject/tut_gsignal.xml: 
	* gobject/tut_gobject.xml: Fix typos, found by Andrew Feren.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add g_app_info_get_commandline

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/keyfile.sgml: Explain locale identifiers in
	more detail

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562549 – g_byte_array_free should tell how free data

	* glib/tmpl/arrays_byte.sgml: Improve docs, proposed by
	Guillaume Desmottes

2008-11-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/Makefile.am:
	* gobject/Makefile.am: